# password-manager

./: .gitignore  FEATURE_CODE_FIELD_PLAN.md  README.md  package-lock.json  package.json  skills-lock.json  tsconfig.json  vite.config.ts  wdio.conf.ts
.github/workflows/: release.yml  test.yml
.project-root/: AGENTS.md  CODING_RULE.md  WORKFLOW.md
e2e/test/: app.e2e.ts
src/: App.css  App.tsx  setupTests.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  crypto.rs  db.rs  error.rs  lib.rs  models.rs
src/components/: Dashboard.tsx  HealthDashboard.tsx  PasswordGenerator.tsx  SettingsPanel.tsx  UserGuide.tsx  VaultScreen.tsx
src/components/__tests__/: Dashboard.test.tsx  PasswordGenerator.test.tsx  VaultScreen.test.tsx
src/types/: index.ts
