[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
zeroize = "1.9.0"
rusqlite = { version = "0.40.1", features = ["bundled-sqlcipher-vendored-openssl"] }
tauri-plugin-single-instance = "2.4.2"
thiserror = "2.0.18"
rand = "0.10.2"
uuid = { version = "1.23.4", features = ["v4"] }
hex = "0.4.3"

